--- a/scTaker/scrapy.cfg
+++ b/scTaker/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = soundcloud.settings
+default = scTaker.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = soundcloud
+project = scTaker
